fix some mobile overlap issues

--- a/src/app/favorite-tile/favorite-tile.component.scss
+++ b/src/app/favorite-tile/favorite-tile.component.scss
@@ -19,7 +19,7 @@
     flex-direction: row;
     justify-content: flex-end;
     position: relative;
-    bottom: 30px;
+    bottom: 25px;
     left: 8.5px;
   }
 
@@ -31,6 +31,6 @@
     height: 381px;
     overflow-y: auto;
     position: relative;
-    bottom: 30px;
+    bottom: 25px;
   }
 }
