--- a/src/app/peliculas/peliculas.component.scss
+++ b/src/app/peliculas/peliculas.component.scss
@@ -5,6 +5,10 @@
   margin: 0.5em;
   margin-bottom: 80px;
 
+  @media screen and (max-width: 656px) {
+    margin-bottom: 144px;
+  }
+
   .peliculas__favoritos {
     display: grid;
     gap: 1em;
